2000-01-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c, include/libz.h, lib/parseintv.c,
	  lib/Makefile.in, scheduler/readconfig.c:
	    - Moved  parse_interval()  into library (from scheduler).
	    - Using it at smtp-ta for timeout parameter parsing

	* transports/smtp/smtp.c:
	    If 'DATA' yields '500' series, don't just do RSET + retry
	    at the same stream. (EX_IOERR)

2000-01-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/libdb/headers.c:
	    Darn..  Can't just disable "date" from known headers, however
	    changeing their semantics to 'nilHeaderSemantics' should do it.

	* scheduler/threads.c:
	    abort() replaced with correct code -- "the thing never to
	    happen *did* happen"...

2000-01-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822.c, lib/skip821address.c, transports/libta/ctlopen.c:
	    Have seen one mighty strange local non-delivery, and learned
	    ways to use quotes in addresses which are not always safe from
	    router to scheduler, and to TAs..

	* man/smtp.8, proto/smtp-tls.conf{,.in}, doc/guides/openssl,
	  configure.in, proto/Makefile.in, proto/scheduler.conf.in,
	  proto/post-install.sh.in:
	    - Updated 'smtp.8' man-page
	    - Updated OpenSSL GUIDE
	    - Updated the prototype of  smtp-tls.conf  (and renamed
	      it for autoconf reasons)
	    - Install the  smtp-tls.conf  prototype file (for post-install)
	    - Updated  post-install.sh
	    - Added example usage clause to scheduler.conf.in

	* transports/smtp/smtp.c, transports/smtp/smtp.h,
	  transports/smtp/smtptls.c, transports/smtp/appendlet.c:
	    Reworked the timeout parametrizations somewhat
	    (per what a colleque of mine had asked for)

	* router/libdb/header.c, router/rfc822hdrs.c:
	    Remove the "Date" headers from specially recognized set.
	    Will end PARSING of the headers completely - it is an UA
	    problem, after all.
	    --> WHOOPS! Must fix also  router/rfc822hdrs.c !

	* scheduler/scheduler.c: